# ITKSoftwareGuide

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  CTestConfig.cmake  Common.cmake  ITKSoftwareGuide.cmake  README.md  SuperBuild.cmake  TODO  readme.rst
.circleci/: config.yml
.github/: labeler.yml
CMake/: CTestCustom.cmake.in  ExternalData.cmake  ITKSetStandardCompilerFlags.cmake  ITKSoftwareGuideExternalData.cmake  ITK_CheckCCompilerFlag.cmake  PreventInSourceBuilds.cmake  SlicerMacroCheckExternalProjectDependency.cmake  SlicerMacroEmptyExternalProject.cmake
Latex/: HowtoExample.tex  Insight.bib  Insight.sty  InsightHowto.cls  InsightPaper.sty  InsightSoftwareGuide.cls  doubleWordCheck.pl  doubleWordCheck.py  extractImageBoundingBox.sh  gitdags.sty
SoftwareGuide/: Abstract.tex  Applications.tex  CMakeLists.txt  DataRepresentation.tex  DvipsWrapper.bat.in  Filtering.tex  GUI.tex  HTLaTeXWrapper.bat.in  HTLaTeXWrapper.sh.in  IO.tex  Infrastructure.tex  Iterators.tex  LaTeXWrapper.bat.in  LaTeXWrapper.sh.in  Numerics.tex  ParseCxxExamples.pl  ParseCxxExamples.py  README.txt  Registration.tex  Segmentation.tex  SoftwareGuide.tex  SoftwareGuideConfiguration.tex.in  SoftwareProcess.tex  Visualization.tex  Wrapping.tex  doxygen.config.in  old_code.cmake
SoftwareGuide/Art/: BSplineInterpolation.eps  BSplineInterpolation.fig  BayesianPluginClassifier.eps  BayesianPluginClassifier.fig  BinaryThresholdTransferFunction.eps  CMakeLists.txt  CannySegmentationLevelSetImageFilterCollaborationDiagram1.eps  CannySegmentationLevelSetImageFilterCollaborationDiagram1.fig  CompositeExamplePipeline.eps  CompositeExamplePipeline.fig  CompositeFilterStages.eps  CompositeFilterStages.fig  Configure_ITK_Default.eps  Configure_ITK_Group.eps  DICOM-OrientationDiagram-LPS.dia  DICOM-OrientationDiagram-Radiologist-vs-NeuroSurgeon.dia  DataPipeline.eps  DataPipeline.fig  DataPipelineOneConnection.eps  DataPipelineOneConnection.fig  DataPipelineUpdate.eps  DataPipelineUpdate.fig  DeformableModelCollaborationDiagram.eps  DeformableModelCollaborationDiagram.fig  DiscreteGaussian.eps  DudaClassifier.eps  FastMarchingCollaborationDiagram1.eps  FastMarchingCollaborationDiagram1.fig  FuzzyConnectednessClassDiagram1.eps  FuzzyConnectednessClassDiagram1.fig  FuzzyConnectednessCollaborationDiagram1.eps  FuzzyVoronoiCollaborationDiagram1.eps  FuzzyVoronoiDeformableCollaborationDiagram1.eps  GeodesicActiveContourShapePriorCollaborationDiagram.eps  GeodesicActiveContourShapePriorCollaborationDiagram.fig  GeodesicActiveContoursCollaborationDiagram1.eps  GeodesicActiveContoursCollaborationDiagram1.fig  GeometricalObjects.eps  GeometricalObjects.fig  Histogram.eps  (+182 more)
SoftwareGuide/CMake/: FindLATEX.cmake
SoftwareGuide/Cover/: ITKSoftwareGuideSinglePDFCoverPage.odt  README.md
SoftwareGuide/Cover/Source/: AntialiasFilter.cxx  BinaryMaskMedianFilter.cxx  BinaryThresholdFilter.cxx  CMakeLists.txt  DilateFilter.cxx  ImageReadExtractWriteRGB.cxx  ModelBasedSegmentation.cxx  NegateFilter.cxx  RescaleIntensityFilter.cxx  SoftwareGuideCover.tcl  VWBlueRemoval.cxx  VWColorSegmentation.cxx  VWHistogramHSV.cxx  VWHistogramRGB.cxx  VectorGradientAnisotropicDiffusionFilter.cxx  seedPoints
SoftwareGuide/Examples/: CMakeLists.txt  DataRepresentationImagePage.dox  DataRepresentationMeshPage.dox  DataRepresentationPointSetPage.dox  FilteringImages.dox  ParseCxxExamples.py  RunExamples.pl  RunExamples.py
SoftwareGuide/Latex/: 00-Preamble-Common.tex  00-SoftwareGuide.tex  000-ITKSoftwareGuide-Book1.tex  001-ITKSoftwareGuide-Book2.tex  01-PrintedPreamble-Book1.tex  01-PrintedPreamble-Book2.tex  01-PrintedPreamble-Common.tex  01-PrintedPreamble.tex  02-Cover-Book1.tex  02-Cover-Book2.tex  02-Cover.tex  03-Abstract-Book1.tex  03-Abstract-Book2.tex  03-Abstract-Common.tex  03-Abstract.tex  04-Contributors.tex  05-Introduction.tex  06-Installation.tex  07-SystemOverview.tex  A01-SystemOverview.tex  A02-DataRepresentation.tex  AP01-Licenses.tex  AP02-CodingStyleGuide.tex  Abstract.tex  AnisotropicDiffusionFiltering.tex  CMakeLists.txt  CellularAggregates.tex  CommandLineArgumentsForExamples.tex  ConfidenceConnectedOnBrainWeb.tex  Contributors.tex  Cover.tex  DF01-IO.tex  DF02-Filtering.tex  DF03-Registration.tex  DF04-Segmentation.tex  DF05-Statistics.tex  DG01-Iterators.tex  DG03-WriteAFilter.tex  DG04-CreateAModule.tex  DG04-SoftwareProcess.tex  (+57 more)
SoftwareGuide/Latex/Appendices/: CodingStyleGuide.tex  GitWorkflow.tex  Licenses.tex
SoftwareGuide/Latex/Architecture/: DataRepresentation.tex  ImageAdaptors.tex  Iterators.tex  SpatialObjects.tex  SystemOverview.tex
SoftwareGuide/Latex/DesignAndFunctionality/: AnisotropicDiffusionFiltering.tex  ConfidenceConnectedOnBrainWeb.tex  DeformableRegistration.tex  DeformableRegistration4OnBrain.tex  DemonsRegistration.tex  FeatureExtractionMethods.tex  Filtering.tex  FiniteElementRegistrationParameters1.txt  HybridSegmentationMethods.tex  IO.tex  ImageInterpolators.tex  ImageMetrics.tex  ImagePyramids.tex  LevelSetsSegmentation.tex  ModelBasedRegistration.tex  Optimizers.tex  Registration.tex  Segmentation.tex  Statistics.tex  Transforms.tex  VisualizingDeformationFieldsUsingParaview.tex  WatershedSegmentation.tex
SoftwareGuide/Latex/DevelopmentGuidelines/: CreateAModule.tex  SoftwareProcess.tex  WriteACompositeFilter.tex  WriteAFilter.tex
SoftwareGuide/Latex/Introduction/: Installation.tex  Introduction.tex
SuperBuild/: External_ITK.cmake  External_ITKv4.cmake  External_RunExamples.cmake
Utilities/: SetupForDevelopment.sh  latex_linter.sh
cmake/: ITKDoxygen.cmake  ITKDoxygenXML.cmake  ITKSoftwareGuideExternalData.cmake
formatting/: conf.py.in
src/: Abstract.rst  BSplineWarping1.rst  BayesianClassifier.rst  BayesianClassifierInitializer.rst  BayesianPluginClassifier.rst  BinaryMinMaxCurvatureFlowImageFilter.rst  BoundingBoxFromImageMaskSpatialObject.rst  CellularAggregates.rst  CellularSegmentation1.rst  ChangeInformationImageFilter.rst  ComplexImageReadWrite.rst  ConfidenceConnected3D.rst  ConnectedThresholdImageFilter.rst  ConvertAnalyzeFile.rst  (+104 more)
(+316 files in other folders)
